--- a/python/fatcat_web/templates/base.html
+++ b/python/fatcat_web/templates/base.html
@@ -87,7 +87,7 @@
   {% if messages %}
     <div class="ui message">
     {# Needs more javascript: <i class="close icon"></i> #}
-    <div class="header">Now Hear This...</div>
+    <div class="header">Flash Message!</div>
     <ul class="list">
     {% for message in messages %}
       <li>{{ message|safe }}
