add guide editing links to edit forms and signup message

--- a/python/fatcat_web/templates/container_create.html
+++ b/python/fatcat_web/templates/container_create.html
@@ -6,10 +6,7 @@
 
 <p>A "container" is a anything that groups publications together. For example,
 a journal (eg, "New England Journal of Medicine"), conference proceedings, a
-book series, or a blog.
-
-<p>Not all publications are in a container.
-
+book series, or a blog. Not all publications are in a container.
 
 <form class="ui form" id="create_container_form" method="POST" action="/container/create">
 {% endblock %}
