webface: extra <br> in container lookup links

--- a/python/fatcat_web/templates/container_view.html
+++ b/python/fatcat_web/templates/container_view.html
@@ -148,7 +148,7 @@
       <a href="http://www.sherpa.ac.uk/romeo/issn/{{ container.issnl }}/">SHERPA/RoMEO</a> (access policies)<br>
     {% endif %}
     {% if not container.wikidata_qid %}
-      <br><a href="https://www.wikidata.org/w/index.php?search={{ container.name|urlencode }}">wikidata.org</a>
+      <a href="https://www.wikidata.org/w/index.php?search={{ container.name|urlencode }}">wikidata.org</a><br>
     {% endif %}
   </div>
 </div>
