--- a/python/fatcat_web/templates/release_search.html
+++ b/python/fatcat_web/templates/release_search.html
@@ -36,33 +36,16 @@
 
 {% if found %}
 {% if found.results %}
-  <i>Showing
-    {% if found.offset == 0 %}
-      first
-    {% else %}
-      results {{ found.offset }} &mdash;
-    {% endif %}
-    {{ found.offset + found.count_returned }} out of {{ found.count_found }} results for: <code>{{ found.query.q }}</code></i>
-
-    <br>
-    {% if found.offset > 0 %}
-        {% if found.offset - found.limit < 0 %}
-          <a href="{{ url_for('release_search', q=query, offset=0) }}">Prev</a>
-        {% else %}
-          <a href="{{ url_for('release_search', q=query, offset=found.offset - found.limit) }}">Prev</a>
-        {% endif %}
-    {% endif %}
-
-    {% if found.offset + found.limit < found.count_found and found.offset + found.limit < found.deep_page_limit %}
-      <a href="{{ url_for('release_search', q=query, offset=found.offset + found.limit) }}">Next</a>
-    {% endif %}
+    {{ entity_macros.top_results(found) }}
 
   {% for paper in found.results %}
   {{ entity_macros.release_search_result_row(paper) }}
 {% endfor %}
 {% if found.results|length > 8 %}
-  <br>
-  <i>Showing top {{ found.count_returned }} out of {{ found.count_found }} results for: <code>{{ found.query.q }}</code></i>
+  <div class="ui divider"></div>
+  <div style="text-align: center">
+  {{ entity_macros.bottom_results(found)}}
+  </div>
 {% endif %}
 {% else %}
 
