add missing underline in deleted entity web view

--- a/python/fatcat_web/templates/deleted_entity.html
+++ b/python/fatcat_web/templates/deleted_entity.html
@@ -9,7 +9,7 @@
 <div class="one wide column"></div>
 <div class="fifteen wide column">
   <h1 class="ui header">Deleted Entity
-  <div class="sub header"><code>{{ entity_type }}{{ entity.ident }}</code></div></h1>
+  <div class="sub header"><code>{{ entity_type }}_{{ entity.ident }}</code></div></h1>
 </div>
 </div>
 
