datacite release links and metadata expansion
Small ergonomic changes for datacite releases:

- add a link to live/current datacite metadata (like we do for Crossref)
- expand "extra" metadata fields under 'datacite' dict in metadata view

--- a/python/fatcat_web/templates/entity_macros.html
+++ b/python/fatcat_web/templates/entity_macros.html
@@ -65,7 +65,7 @@
 <table class="ui definition single line fixed compact small unstackable table">
 <tbody>
 {% for (key, value) in extra.items()|sort %}
-  {% if key in ("ia", "crossref", "kbart", "arxiv", "jstor", "pubmed") and value is mapping and value %}
+  {% if key in ("ia", "crossref", "datacite", "kbart", "arxiv", "jstor", "pubmed") and value is mapping and value %}
     {% for (inner_key, inner_value) in value.items()|sort %}
       <tr><td class="three wide right aligned"><code>{{ key }}.{{ inner_key }}</code></td>
           <td class="seven wide"><code>{{ inner_value }}</code>
