--- a/python/fatcat_web/templates/entity_macros.html
+++ b/python/fatcat_web/templates/entity_macros.html
@@ -242,7 +242,7 @@ yellow
   {% else %}
   results {{ found.offset }} &mdash;
   {% endif %}
-  
+
   {{ found.offset + found.count_returned }}
   out of {{ found.count_found }} results
 </i>
@@ -250,13 +250,13 @@ yellow
 {%- endmacro %}
 
 
-{% macro bottom_results(found) -%}
+{% macro bottom_results(found, endpoint='release_search') -%}
 
 {% if found.offset > 0 %}
   {% if found.offset - found.limit < 0 %}
-    <a href="{{ url_for('release_search', q=found.query.q, offset=0) }}">&#xab; Previous</a>
+    <a href="{{ url_for(endpoint, q=found.query.q, offset=0) }}">&#xab; Previous</a>
   {% else %}
-    <a href="{{ url_for('release_search', q=found.query.q, offset=found.offset - found.limit) }}">&#xab; Previous</a>
+    <a href="{{ url_for(endpoint, q=found.query.q, offset=found.offset - found.limit) }}">&#xab; Previous</a>
   {% endif %}
 {% else %}
   <span style="color:gray">&#xab; Previous</span>
@@ -266,7 +266,7 @@ yellow
 found.count_returned }} out of {{ found.count_found }} results</i>&nbsp;&nbsp;
 
 {% if found.offset + found.limit < found.count_found and found.offset + found.limit < found.deep_page_limit %}
-  <a href="{{ url_for('release_search', q=found.query.q, offset=found.offset + found.limit) }}">Next &#xbb;</a>
+  <a href="{{ url_for(endpoint, q=found.query.q, offset=found.offset + found.limit) }}">Next &#xbb;</a>
   {% else %}
   <span style="color:gray">Next &#xbb;</span>
 {% endif %}
