container lookup: link to issn portal search
Example:

https://fatcat.wiki/container/lookup?issnl=2007-1248 - the linked
https://portal.issn.org/2007-1248 yields a "page not found", while
search yields results:
https://portal.issn.org/api/search?search[]=MUST=allissnbis=2007-1248

--- a/python/fatcat_web/templates/container_lookup.html
+++ b/python/fatcat_web/templates/container_lookup.html
@@ -20,10 +20,9 @@ search for an existing record missing that identifier, or create a new container
 entity. 
 {% if lookup_key == "issnl" %}
 <p>You can check if it is a registered ISSN-L by visiting:
-<b><a href="https://portal.issn.org/{{ lookup_value
-}}">https://portal.issn.org/{{ lookup_value }}</a></b>. If this is a valid
-electronic or print ISSN, but not the ISSN-L for the container, you need to use
-the indicated "linking" ISSN.
+<b><a href="https://portal.issn.org/api/search?search[]=MUST=allissnbis={{ lookup_value }}">https://portal.issn.org/api/search?search[]=MUST=allissnbis={{ lookup_value }}</a></b>.
+If this is a valid electronic or print ISSN, but not the ISSN-L for the
+container, you need to use the indicated "linking" ISSN.
 {% elif lookup_key == "wikidata_qid" %}
 <p>You can check if it is a real Wikidata entity by visiting:
 <b><a href="https://www.wikidata.org/wiki/{{ lookup_value }}">https://www.wikidata.org/wiki/{{ lookup_value }}</a></b>
