improve citeproc/CSL web interface
This tries to show the citeproc (bibtext, MLA, CSL-JSON) options for
more releases, and not show the links when they would break.

The primary motivation here is to work around two exceptions being
thrown in prod every day (according to sentry):

  KeyError: 'role'
  ValueError: CLS requries some surname (family name)

I'm guessing these are mostly coming from crawlers following the
citeproc links on release landing pages.

--- a/python/fatcat_web/templates/release_view.html
+++ b/python/fatcat_web/templates/release_view.html
@@ -388,8 +388,7 @@ accessible version.
   <br>grouping other versions (eg, pre-print) and variants of this release
 </div>
 
-{# this restriction, for CSL-JSON generation, rules out almost everything #}
-{% if release.contribs and release.contribs[0].creator_id %}
+{% if release._can_citeproc %}
 <div class="ui segment attached accordion">
   <div class="title" style="padding: 0px;">
     <i class="dropdown icon"></i><b>Cite This Release</b>
