--- a/python/fatcat_web/templates/file_view.html
+++ b/python/fatcat_web/templates/file_view.html
@@ -44,8 +44,8 @@ No known public URL, mirror, or archive for this file.
 </div>
 <div class="column" style="flex: 0 0 24em;">
 
-{% if file.urls != None and file.urls != [] %}
-<a href="{{ file.urls[0].url }}" class="ui top attached fluid huge green button"><i class="file icon"></i>Download File</a>
+{% if file._es and file._es.best_url %}
+<a href="{{ file._es.best_url }}" class="ui top attached fluid huge green button"><i class="file icon"></i>Download File</a>
 {% else %}
 <span class="ui top attached fluid huge grey button"><i class="file cross icon"></i>No Download Available</span>
 {% endif %}
